k8s/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr 
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      name: radarr
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        imagePullPolicy: Always
        ports:
          - name: radarr
            containerPort: 7878
        volumeMounts:
        - mountPath: "/config"
          name: radarr-config
        - mountPath: "/downloads/completed"
          name: completed-downloads
        - mountPath: "/movies"
          name: movies
      volumes:
      - name: radarr-config
        iscsi:
          targetPortal: 10.10.11.5:3260
          iqn: iqn.2000-01.com.synology:Library.radarr-config
          lun: 1
          fsType: ext4
          readOnly: false
      - name: completed-downloads
        nfs:
          server: library.faircloth.ca
          path: /volume1/downloads/completed
      - name: movies
        nfs:
          server: library.faircloth.ca
          path: /volume1/Videos/Movies
      dnsConfig:
        options:
        - name: ndots
          value: "1"
