k8s/radarr/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: radarr 
spec:
  selector:
    app: radarr 
  ports:
    - protocol: TCP
      port: 7878 
      targetPort: 7878
