k8s/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr 
spec:
  rules:
  - host: media.faircloth.ca
    http:
      paths:
      - path: /radarr
        pathType: ImplementationSpecific
        backend:
          service:
            name: radarr
            port:
              number: 7878
